# nfs-bot

./: .dockerignore  Dockerfile  docker-compose.example.yml  nft_bot.example.toml  pyproject.toml  ruff.toml  sql.sql
src/nft_bot/: cli.py  config.py  consts.py
src/nft_bot/application/common/: id_provider.py  interactor.py  transaction_manager.py
src/nft_bot/application/currency_exchange_rate/: data_gateway.py
src/nft_bot/application/nft/: data_gateway.py  data_structure.py  errors.py
src/nft_bot/application/nft/interactors/: create.py  update.py
src/nft_bot/application/profile/: data_gateway.py  data_structure.py  errors.py
src/nft_bot/application/profile/interactors/: create.py  read.py  update.py
src/nft_bot/domain/nft/: entity.py  errors.py  value_objects.py
src/nft_bot/domain/profile/: entity.py  errors.py  value_objects.py
src/nft_bot/infrastructure/data_mappers/: currency_exchange_rate.py  nft.py  profile.py
src/nft_bot/infrastructure/id_providers/: profile_id.py
src/nft_bot/infrastructure/transaction_managers/: database.py
src/nft_bot/main/: build_ioc.py  injects.py
src/nft_bot/main/bot/: run.py  setup.py
src/nft_bot/main/providers/: config.py  connection.py  context.py  data_mappers.py  id_providers.py  interactors.py  localization.py  transaction_managers.py
src/nft_bot/presentation/: localization.py
src/nft_bot/presentation/bot/: states.py  types.py  utils.py
src/nft_bot/presentation/bot/middlewares/: container.py
src/nft_bot/presentation/bot/presentors/: add_nft.py  edit_nft.py  main.py  pagintation_nft.py  profile.py  (+1 more)
(+8 files in other folders)
